--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_petitem_list">Pet Items</string>
     <string name="title_petitem_detail">PetItem Detail</string>
+    <string name="title_activity_take_picture">TakePicture</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="new_add">New Ad</string>
 
 </resources>
