--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_petitem_list">Pet Items</string>
-    <string name="title_petitem_detail">PetItem Detail</string>
+    <string name="title_petitem_list">Pets</string>
+    <string name="title_petitem_detail">Pet Detail</string>
     <string name="title_activity_take_picture">TakePicture</string>
     <string name="hello_world">Hello world!</string>
     <string name="new_add">New Ad</string>
