Get ads with filter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Petsi</string>
+    <string name="app_name">Petsy</string>
     <string name="title_activity_main">Petsy</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
