--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
+    <string name="default_birth_date">1990/08/07</string>
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_petitem_list">Pets</string>
@@ -17,5 +18,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="new_add">New Ad</string>
     <string name="title_activity_start">Hello!</string>
+
 
 </resources>
